Delete the space above hmenu in module Customer and Order (Setting is not fixed yet).

--- a/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerInteraction.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
 	
 </head>
-<body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
-	data-open="click" data-menu="vertical-compact-menu"
-	data-col="2-columns">
+<body>
+<!-- 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" -->
+<!-- 	data-open="click" data-menu="vertical-compact-menu" -->
+<!-- 	data-col="2-columns" -->
 
 	<!-- BEGIN HEADER -->
 	<th:block th:include="fragments/hmenu"></th:block>
