--- a/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
@@ -20,15 +20,14 @@
 <th:block th:include="fragments/head"></th:block>
 </head>
 <!-- class="vertical-layout vertical-compact-menu menu-expanded fixed-navbar" Bỏ khoảng trống ở dòng bên trái, dòng này đặt ngay dưới "<body" -->
-<body
-	class="fixed-navbar"
-	data-open="click" data-menu="vertical-compact-menu"
-	data-col="1-columns">
+<body>
+<!-- 	class="fixed-navbar" data-open="click" data-menu="vertical-compact-menu" data-col="1-columns" -->
+
 
 	<!-- BEGIN HEADER  -->
-	
-	<!-- END HEADER  -->
 	 <th:block th:include="fragments/hmenu"></th:block>
+	<!-- END HEADER  -->
+	
 	<!-- BEGIN LEFT MENU NAVIGATION -->
 	
 	<!-- END LEFT MENU NAVIGATION -->
