--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal_v2.html
@@ -33,10 +33,10 @@ div#createOrderModal{
 	z-index:1;
 }
 </style>
-<body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
-	data-open="click" data-menu="vertical-compact-menu"
-	data-col="2-columns">
+<body>
+<!-- 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" -->
+<!-- 	data-open="click" data-menu="vertical-compact-menu" -->
+<!-- 	data-col="2-columns" -->
 	
 	<th:block th:include="fragments/hmenu"></th:block>
 
