--- a/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersConfigurationCRMScreen_v2.html
@@ -26,8 +26,9 @@
 	<th:block th:include="fragments/head"></th:block>
 </head>
 
-<body class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" data-open="click"
-	data-menu="vertical-compact-menu" data-col="2-columns">
+<body> 
+<!-- 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" data-open="click" -->
+<!-- 	data-menu="vertical-compact-menu" data-col="2-columns" -->
 
 	<!-- BEGIN HEADER -->
 	<!-- <th:block th:include="fragments/headerCRM"></th:block> Thanh nav cũ -->
@@ -62,7 +63,7 @@
 	</div>
 
 	<!-- END CONTENT -->
-	<p>hahah</p>
+	
 	<!-- START CUSTOMIZE BUTTON -->
 	<th:block th:include="fragments/customizeButton"></th:block>
 	<!-- END CUSTOMIZE BUTTON -->
