--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
@@ -25,10 +25,10 @@
 	<th:block th:include="fragments/head"></th:block>
 </head>
 
-<body
-	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar"
-	data-open="click" data-menu="vertical-compact-menu"
-	data-col="2-columns">
+<body>
+<!-- 	class="vertical-layout vertical-compact-menu 2-columns menu-expanded fixed-navbar" -->
+<!-- 	data-open="click" data-menu="vertical-compact-menu" -->
+<!-- 	data-col="2-columns" -->
 
 	<!-- BEGIN HEADER -->
 	<!-- <th:block th:include="fragments/headerCRM"></th:block> -->
