--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -409,8 +409,12 @@
 		
 	<!-- Chat Button -->
 	<button id="chat-button" class="btn btn-primary rounded-circle shadow">
-	    💬
+	    <img src="resources/Image/chatbot.png" alt="💬" class="img-chatbot">
 	</button>
+	
+	<div id="chat-assistant" class="chat-box">
+		<div id="chat-messages"></div>
+	</div>
 </body>
 	
 	<!-- Chat Assistant JavaScript -->
