Fix bugs displaying date time when using LocallDateTime successfully.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -67,7 +67,7 @@
 	        <div class="modal-buttons">
 	            <!-- <button id="minimize-btn-modal" class="modal-btn">Minimize</button> -->
 	            <button id="reloadCustomerCare" class="modal-btn btn btn-warning" style="color: black !important">
-					<i class="fa fa-sync"></i> Tải lại danh sách
+					<i class="fa fa-sync"></i> LƯU DANH SÁCH
 				</button>
 				<button id="close-btn-modal" class="modal-btn">Đóng</button>
 	        </div>
