Add remind date (ngày nhắc nhở) for CustomerCare and successfully fix problems related to searching and sorting in customer care datatable.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_datatable.html
@@ -1,9 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<script th:inline="javascript">
+<!-- <script th:inline="javascript">
 	var dataSetCustomerCare = /*[[${dataSetCustomerCare}]]*/'[]'; // Thymeleaf sẽ thay thế ${dataSet} bằng dữ liệu thực tế
 </script>
-
+ -->
 <table id="tblDatatableCustomerCare" class="table table-striped table-bordered file-export">
 	<!-- Truyền dataSet vào JavaScript -->
 	<thead>
@@ -18,7 +18,7 @@
 			<th>Tình trạng chăm sóc</th>
 			<th>Thực hiện chăm sóc</th>
 			<th>Ngày nhắc nhở</th>
-		</tr>
+		</tr> 
 	</thead>
 	
 	<tbody>
