Update care status for customer care comletely (version 1).

--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -70,6 +70,9 @@
 	            <button id="reloadCustomerCare" class="modal-btn btn btn-warning" style="color: black !important">
 					<i class="fa fa-sync"></i> LƯU DANH SÁCH
 				</button>
+				<button id="checkCareStatus" class="modal-btn btn btn-danger" style="color: white !important">
+					<i class="fa fa-check"></i> CẬP NHẬT TÌNH TRẠNG CHĂM SÓC
+				</button>
 				<button id="close-btn-modal" class="modal-btn">Đóng</button>
 	        </div>
 	    </div>
