Contitnue updating Customer Care

--- a/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/chat/frg_chatAssistant.html
@@ -31,7 +31,7 @@
 	            <li class="mb-3">
 	                <div class="bg-light p-2 rounded">
 	                    <p class="mb-1 text-dark">Nhắc nhở: Bạn đang có 
-		                    <span style="font-weight: 600;">10 khách hàng</span> cần chăm sóc ngay. Đừng bỏ lỡ họ!
+		                    <span style="font-weight: 600;">SL khách hàng</span> cần chăm sóc ngay. Đừng bỏ lỡ họ!
 		                    <span class="click-here" id="click-here">Click vào đây!</span>
 	                    </p>
 	                    <small class="text-muted">Hôm nay, 09:00 AM</small>
