--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
@@ -136,7 +136,7 @@
 	<!-- Modal CRUD Người phụ trách -->
 	<div class="modal" tabindex="-1" role="dialog" id="responsibleModal" aria-hidden="true">
 	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
+	    <div class="modal-content" style="margin-top: 400px">
 	      <div class="modal-header">
 	        <h5 class="modal-title text-light" id="responsibleModalLabel" ></h5>
       	    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" data-dismiss="modal"></button>
